internal/xds/translator/testdata/out/xds-ir/http-route-weighted-invalid-backend.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: invalid-backend-cluster
            weight: 1
          - name: first-route-dest/backend/0
            weight: 1
    - match:
        prefix: /
      name: second-route
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: invalid-backend-cluster
            weight: 1
          - name: second-route-dest/backend/0
            weight: 1
    - match:
        prefix: /
      name: third-route
      route:
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: invalid-backend-cluster
            weight: 2
          - name: third-route-dest/backend/0
            weight: 1
    - match:
        prefix: /
      name: fourth-route
      route:
        weightedClusters:
          clusters:
          - name: invalid-backend-cluster
            weight: 1
          - name: fourth-route-dest/backend/0
            weight: 1
